--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^24.9.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
